# eclm-agent

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
.claude/commands/: add-primitive.md  benchmark.md  debug.md  dpo-collect.md  plan.md  project.md  scaffold.md  spec.md  train.md  verify.md
.claude/memory/: architecture.md  decisions.md  progress.md
data/codebase_index/: chroma.sqlite3
data/primitives/: chroma.sqlite3
docker/sandbox/: Dockerfile
prompts/: plan_generator.md
scripts/: bootstrap_dataset.py  build_curriculum.py  generate_plan.py  monthly_finetune.py  run_benchmark.py  run_remote.sh  setup_linux.sh
src/: pipeline.py
src/agents/: __init__.py  base.py  code_writer.py  fixer.py  integrator.py  spec_writer.py  test_writer.py
src/api/: __init__.py  models.py  server.py
src/eclm/: __init__.py  ast_ops.py  beam_search.py  dataset.py  model.py  train.py
src/improvement/: __init__.py  adversarial.py  dpo_collector.py  finetune.py
src/intent/: __init__.py  dataset.py  model.py  train.py
src/orchestrator/: __init__.py  agent.py  architect.py  context.py  critic.py  dependency_graph.py  project.py  rag.py  router.py  writer.py
src/planner/: __init__.py  dataset.py  model.py  train.py
src/shared/: config.py  types.py
tests/: test_adversarial.py  test_agents.py  test_ast_ops_call_sites.py  test_critic.py  test_dependency_graph.py  test_eclm.py  test_fix_loop.py  test_library.py  test_planner.py  test_project.py  test_router.py  test_test_generator.py  test_verifier.py  test_verifier_strict.py  test_writer.py
(+7 files in other folders)
