[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eclm-agent"
version = "0.1.0"
requires-python = ">=3.11"

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/", "scripts/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = ["*/test_*", "scripts/*"]
